--- a/homeworks/hw1/index.html
+++ b/homeworks/hw1/index.html
@@ -1,6 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <body>
-        Homework 1
-    </body>
+   <head>
+       <title>Welcome Page</title>
+   </head>
+   <body>
+       <h1>Sarah Suen</h1>
+       <em>Cognitive Science | 1st Year</em>
+       <p>Hi! I'm Sarah, a Bay Area native who loves ice cream. I also love listening to music, crocheting, dance, designing, and anything that utilizes creativity.</p>
+       <h4>Favorite Places to Eat in Berkeley:</h4>
+       <ul>
+        <li>Yogurt Park</li>
+        <li>Sweetheart Cafe</li>
+        <li>Noodles Fresh</li>
+       </ul>
+       <img src="assets/img/meanddog.jpg" height=500/>
+       <p><a href="https://www.nytimes.com/games/wordle/index.html">Wordle!</a></p>
+       <ul>
+        <li>Something I learned from <a href="https://uxdesign.cc/how-to-develop-an-eye-for-design-c5a4c64bb26c">this article</a> is that I should study the design aspects of apps. By focusing on hierarchy, content, intent, and audience, it would be effective to look from a design perspective, rather than just a user's perspective.</li>
+        <li>I enjoyed looking at the Spotify app observations because I use the app every day, but haven't really thought to observe it from a design perspective. I find it interesting that there seems to be a purpose for everything, making the app more intuitive and impactful. </li>
+        <li>Quote: "By routinely analyzing other apps, you’ll develop your product thinking and get better at designing apps yourself."</li>
+        <li>On a scale from 1 to 10, I would rate my experience reading this article an 8.</li>
+    </ul>
+   </body>
 </html>
