--- a/homeworks/hw3/index.html
+++ b/homeworks/hw3/index.html
@@ -1,6 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+	<head>
+		<!-- PROBLEM 0:
+		Link the CSS stylesheet called style.css found in the assets/css folder -->
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="assets/css/initial.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	</head>
+	<body>
+	<div id="content">
+		<div id="navbar">
+			<div class="navbar-item">Home</div>
+			<div class="navbar-item">Discover</div>
+			<div class="navbar-item">Profile</div>
+		</div>
+		<div id="header">
+			<div id="profile-pic"><img src="assets/img/profilepic.jpeg"><!-- Put your profile pic image here --></div>
+			<div id="information">
+				<div id="username">sarah_suen<!-- Your name goes here! --></div>
+				<div id="follow-button">+ Follow</div>
+				<div id="about">
+					<!-- Replace the lorem ipsum filler text and write your about me here! -->
+					ice cream enthusiast
+				</div>
+			</div>
+		</div>
+		<div id="pictures">
+			<div class="row">
+				<div class="item"><img src="assets/img/57629737506__AA0006C5-C144-474F-8E36-680D79D90365.JPG"><!-- A great image --></div>
+				<div class="item"><img src="assets/img/IMG_0152.JPG"><!-- A great image --></div>
+				<div class="item"><img src="assets/img/IMG_0360.JPG"><!-- A great image --></div>
+			</div>
+			<div class="row">
+				<div class="item"><img src="assets/img/IMG_1621.JPG"><!-- A great image --></div>
+				<div class="item"><img src="assets/img/IMG_1797.JPG"><!-- A great image --></div>
+				<div class="item"><img src="assets/img/IMG_5319.JPG"><!-- A great image --></div>
+			</div>
+			<div class="row">
+				<div class="item"><img src="assets/img/IMG_6252.JPG"><!-- A great image --></div>
+				<div class="item"><img src="assets/img/IMG_6318.jpeg"><!-- A great image --></div>
+				<div class="item"><img src="assets/img/IMG_6334.JPG"><!-- A great image --></div>
+			</div>
+		</div>
+	</div>
+	<a href="design_responses.html" id="design">Click to view design responses</a>
+	</body>
 </html>
