--- a/labs/lab3/lab3-starter/index.html
+++ b/labs/lab3/lab3-starter/index.html
@@ -31,7 +31,7 @@
 
 					<li>
 						<p>Export the frame (hint: see bottom of the menu on the right) and insert it below.</p>
-						<p> <img src="assets/img/High Fidelity.png"> </p>
+						<p> <img src="assets/img/High High-Fidelity"> </p>
 						<p>Set your Figma page to "anyone with a link can view" and past the sharing link below.</p>
 						<p> <a href="https://www.figma.com/file/Pcs6RVfGY0NdO6hzbhQJOl/figmatutorial?node-id=0%3A1">Figma Page</a> </p>
 					</li>
