--- a/labs/lab4/index.html
+++ b/labs/lab4/index.html
@@ -1,6 +1,55 @@
-<!DOCTYPE html>
 <html>
-    <body>
-        Lab 1
-    </body>
+
+<head>
+	<title>Lab 4 Submission</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="assets/css/wdd.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+</head>
+
+<body>
+	<div id="container">
+		<div class="section">
+			<div class="info">
+				<div class="info-title">Lab 4 Submission</div>
+				<div class="info-content">
+					<div class="info-required">Instructions</div>
+					<div class="info-intro">Insert each of the items below.</div>
+				</div>
+			</div>
+
+			<div class="body">
+				<div class="body-header">Submission</div>
+				<br>
+				<ul>
+					<li>
+						<p>Take a screenshot of the dribbble (or any other design site) design that you will be adding
+							on to</p>
+						<p> <img src="assets/img/Original_WebPage.png"> </p>
+					</li>
+
+					<li>
+						<p>Link to the above design</p>
+						<p> <a href="https://dribbble.com/shots/19573371-Branding-Packaging-Design-for-Herbaly">Herbaly Dribbble Design</a> (scroll down to find the sample webpage) </p>
+					</li>
+
+					<li>
+						<p>Export the frame (hint: see bottom of the menu on the right) and insert it below.
+							<strong>Make sure all your content is inside that frame, otherwise we won't see it!
+							</strong> </p>
+						<p> <img src="assets/img/New_Page.png"> </p>
+					</li>
+
+					<li>
+						<p>Set your Figma page to "anyone with a link can view" and insert the sharing link below.</p>
+						<p> <a href="https://www.figma.com/file/IUMh7n1Ou3vamlC0oPz3xu/WDD-Lab-4?node-id=1%3A12">Figma Page</a> </p>
+					</li>
+				</ul>
+
+			</div>
+		</div>
+	</div>
+</body>
+
 </html>
