--- a/labs/lab7/index.html
+++ b/labs/lab7/index.html
@@ -23,8 +23,7 @@
                 to the Web Design Decal logo by right-clicking on the element that contains the 
                 New York Times logo in the "Elements" tab and then clicking "Edit as HTML" (hint: 
                 replace the svg element with an img element).</b></li>
-            <li><b>Finally, take a screenshot of your browser and put it in your code submission. 
-                It should look something like this (with your own headlines).</b></li>
+            <li><b>Finally, take a screenshot of your browser and put it in your code submission.</b></li>
             <img src="assets/nyt.png" height="75%">
         </ol>
         <br>
