--- a/homeworks/hw8/index.html
+++ b/homeworks/hw8/index.html
@@ -1,6 +1,55 @@
-<!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+<head>
+	<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<title>Homework 8 - Favorite Songs</title>
+</head>
+
+<body>
+
+<div class="content">
+	<h1>Favorites</h1>
+
+	<!-- Problem 3.1 -->
+	<div id="songs">
+		<ul id="songs-first-half">
+			<li>
+				<div class="song-title">Paranoid</div>
+				<div class="song-artist">Kanye West</div>
+			</li>
+			<li>
+				<div class="song-title">Fire in the Sky</div>
+				<div class="song-artist">Anderson .Paak</div>
+			</li>
+			<li>
+				<div class="song-title">Reality In Motion</div>
+				<div class="song-artist">Tame Impala</div>
+			</li>
+		</ul>
+		<ul id="songs-second-half">
+			<li>
+				<div class="song-title">911 / Mr. Lonely (feat. Frank Ocean & Steve Lacy)</div>
+				<div class="song-artist">Tyler, The Creator</div>
+			</li>
+			<li>
+				<div class="song-title">Not Allowed</div>
+				<div class="song-artist">TV Girl</div>
+			</li>
+			<li>
+				<div class="song-title">Passing Out Pieces</div>
+				<div class="song-artist">Mac DeMarco</div>
+			</li>
+		</ul>
+	</div>
+
+	<button id="toggle-button">Show 3 songs</button>
+	<p>
+		<a href="design_responses.html" style = "color: white"id = "design-response-link">Design Responses Here</a>
+	</p>
+</div>
+
+<script src="assets/script.js"></script>
+		
+</body>
+
 </html>
