--- a/final/index.html
+++ b/final/index.html
@@ -4,7 +4,7 @@
         <title>Sarah Suen</title>
         <link rel="icon" type="image/x-icon" href="assets/images/star.png">
         <link rel="stylesheet" type="text/css" href="assets/style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Rockwell">
         <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Roboto Slab">
     </head>
