--- a/final/index.html
+++ b/final/index.html
@@ -69,14 +69,14 @@
                     <div id="bidc-blob-2"></div>
                     <div id="bidc-blob-3"></div>
                 </div>
-                <a href="in-progress.html"><div class="proj-block">
+                <a target="_blank" rel="noopener noreferrer" href="https://drive.google.com/file/d/1F8Hii_u9dd83vxDoDDIvs9Vl2P7sSlFw/view?usp=sharing"><div class="proj-block">
                     <img src="assets/images/bidc.png" alt="" id="background"/>
                     <div class="right-blurb">
                         <h1>Human-Centered<br>Design Challenge</h1>
                         <h3>Sep 2022</h3>
                         <p>Practicing the human-centered design process of research, ideation, usability testing, and prototyping to address a HMW statement.</p>
-                    </div>
-                </div></a>
+                    </div></a>
+                </div>
             </div>
             <div id="forgepoint">
                 <div class="forgepoint-blobs" id="forgepoint">
